# source2-sdk

./: CMakeLists.txt  README.md
dependencies/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp
example/: CMakeLists.txt
example/src/: includes.hpp  main.cpp
internal/: CMakeLists.txt
internal/src/: dllmain.cpp  includes.hpp
internal/src/core/: config.cpp  config.hpp  menu.hpp  variables.hpp
internal/src/features/visuals/: visuals.cpp  visuals.hpp
internal/src/hooks/create_move/: create_move.cpp
internal/src/hooks/frame_stage_notify/: frame_stage_notify.cpp
internal/src/hooks/level_init/: level_init.cpp
internal/src/hooks/present/: present.cpp
internal/src/hooks/resize_buffers/: resize_buffers.cpp
internal/src/hooks/wndproc/: wndproc.cpp
internal/src/resources/: 04b03.hpp
internal/src/sdk/: collision_property.hpp  player.cpp  player.hpp  tier0.cpp
internal/src/sdk/common/: CUtlString.h  CUtlTSHash.h
internal/src/sdk/interfaces/: client.hpp  engine_client.hpp  global_vars.hpp  mem_alloc.hpp  (+2 more)
shared/: CMakeLists.txt
shared/renderer/: CMakeLists.txt
shared/renderer/src/: device_resources.cpp
shared/spdlog/: tweakme.h
shared/spdlog/fmt/: fmt.h
shared/spdlog/sinks/: callback_sink.h  kafka_sink.h
src/: dllmain.cpp  includes.hpp
src/core/: config.cpp  config.hpp  interfaces.cpp  interfaces.hpp  menu.cpp  menu.hpp  schema.cpp  schema.hpp
src/features/movement/: movement.cpp  movement.hpp
src/features/visuals/: visuals.cpp  visuals.hpp
src/hooks/create_move/: create_move.cpp  create_move.hpp
src/hooks/present/: present.cpp
src/hooks/resize_buffers/: resize_buffers.cpp
src/sdk/: user_cmd.hpp
src/sdk/common/: CUtlMemory.h
src/sdk/interfaces/: csgo_input.hpp  engine_client.hpp
src/sdk/math/: math.cpp
src/utilities/: fnv1a.hpp  globals.hpp  pattern.hpp  utilities.hpp
src/utilities/render/: render.cpp  render.hpp
src/utilities/winapi/: undocumented.hpp
(+6 files in other folders)
